erDiagram
    PESSOA ||--o| PACIENTE : especializa
    PESSOA ||--o| PROFISSIONAL : especializa
    PROFISSIONAL ||--o| RESIDENTE : papel
    PROFISSIONAL ||--o| PRECEPTOR : papel
    PACIENTE ||--o{ ATENDIMENTO : possui
    RESIDENTE ||--o{ ATENDIMENTO : realiza
    PRECEPTOR ||--o{ ATENDIMENTO : supervisiona
    ATENDIMENTO ||--|{ PROCEDIMENTO_REALIZADO : contem
    PROCEDIMENTO ||--o{ PROCEDIMENTO_REALIZADO : executado_em
    UNIDADE ||--o{ ESCALA : organiza
    RESIDENTE ||--o{ ESCALA : escalado
    PRECEPTOR ||--o{ ESCALA : supervisiona
